--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Site Configuration
-NEXT_PUBLIC_SITE_URL=https://weburedno.hr
-NEXT_PUBLIC_SITE_NAME=WebUredno
+NEXT_PUBLIC_SITE_URL=https://uredno.eu
+NEXT_PUBLIC_SITE_NAME=Uredno
 
 # Google Calendar API
 # Get these from Google Cloud Console
@@ -13,9 +13,9 @@ GOOGLE_CALENDAR_ID=your_calendar_id@group.calendar.google.com
 # Email Service (optional - for notifications)
 EMAIL_SERVER_HOST=smtp.gmail.com
 EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USER=your_email@gmail.com
+EMAIL_SERVER_USER=kontakt@uredno.eu
 EMAIL_SERVER_PASSWORD=your_app_specific_password
-EMAIL_FROM=noreply@weburedno.hr
+EMAIL_FROM=kontakt@uredno.eu
 
 # Analytics (optional)
 NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
