--- a/weburedno/.env.template
+++ b/weburedno/.env.template
@@ -35,8 +35,9 @@ WHATSAPP_APP_SECRET=your-app-secret
 # SITE CONFIGURATION
 # =====================================================
 NEXT_PUBLIC_SITE_NAME=WebUredno
+NEXT_PUBLIC_BASE_URL=https://weburedno.hr
 NEXT_PUBLIC_SITE_URL=https://weburedno.hr
-NEXT_PUBLIC_WHATSAPP_PHONE=+385xxxxxxxxx
+NEXT_PUBLIC_WHATSAPP_PHONE=+385958581508
 
 # =====================================================
 # EMAIL SERVICE (Optional - for future implementation)
@@ -54,11 +55,18 @@ NEXT_PUBLIC_WHATSAPP_PHONE=+385xxxxxxxxx
 # NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-publishable-key
 
 # =====================================================
-# MONITORING & ANALYTICS (Optional)
+# MONITORING & ANALYTICS
 # =====================================================
 # SENTRY_DSN=your-sentry-dsn
-# NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 # VERCEL_ANALYTICS_ID=your-vercel-analytics-id
+
+# =====================================================
+# SEO & VERIFICATION
+# =====================================================
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-google-verification-code
+# NEXT_PUBLIC_BING_SITE_VERIFICATION=your-bing-verification-code
+# NEXT_PUBLIC_FACEBOOK_APP_ID=your-facebook-app-id
 
 # =====================================================
 # DEVELOPMENT & DEBUGGING
