fix: Update vercel.json configuration for subdirectory build
- Remove framework detection, use manual commands
- Explicitly set build and install commands to run in weburedno directory
- Set framework to null to avoid auto-detection issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "framework": "nextjs",
-  "installCommand": "cd weburedno && npm install",
   "buildCommand": "cd weburedno && npm run build",
-  "outputDirectory": "weburedno/.next"
+  "outputDirectory": "weburedno/.next",
+  "installCommand": "cd weburedno && npm install",
+  "framework": null
 }
