fix: Simplify vercel.json to use rootDirectory setting
- Use rootDirectory to point Vercel to the weburedno subdirectory
- Let Vercel auto-detect Next.js from there

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "buildCommand": "cd weburedno && npm run build",
-  "outputDirectory": "weburedno/.next",
-  "installCommand": "cd weburedno && npm install",
-  "framework": null
+  "rootDirectory": "weburedno"
 }
